infrastructure/networking/envoy-gateway/app/envoy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  namespace: networking
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy
  listeners:
    - name: test-1
      hostname: test-1.kompa.ss
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            name: test-1-cert
    - name: test-2
      hostname: test-2.kompa.ss
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            name: test-2-cert
