infrastructure/networking/envoy-gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  namespace: networking
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: cloudlab.cura.nz
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: kompass
      hostname: kompa.ss
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: kompass-cert
    - name: auth
      hostname: auth.cura.nz
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: auth-cert
    - name: metrics
      hostname: metrics.cura.nz
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: metrics-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics
  namespace: monitoring
spec:
  hostnames:
    - metrics.cura.nz
  parentRefs:
    - name: envoy-gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /node-exporter
      backendRefs:
        - name: prometheus-node-exporter
          port: 9100
    - matches:
        - path:
            type: PathPrefix
            value: /kube-state-metrics
      backendRefs:
        - name: prometheus-kube-state-metrics
          port: 8080
